Added missing Android build files
- Added build.bat
- Added local.properties files for gradle build

--- a/.gitignore
+++ b/.gitignore
@@ -446,3 +446,4 @@ android/**/build/intermediates
 android/**/build/reports
 android/**/build/tmp
 android/**/build/android-profile
+!/android/**/local.properties
